# hello-python

./: .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: build.yml  ci.yml  dev-ci-cd.yml  dev-ci.yml  release-ci.yml  sonar-scanning.yml
apis/routers/: ping.py
appconf/: __init__.py  info.py  logconf.py  traceconf.py
configuration/: __init__.py
greetings/cases/: cases.py
greetings/errors/: __init__.py  nosupported.py
greetings/ocp/: __init__.py  registry.py
main/: main.py
tests/greetings/cases/: greeting_cases_test.py
tests/greetings/ocp/: greeting_ocp_test.py
